# jw-scraper-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  test-settings.toml.sample
examples/: connector.rs  https.rs
interface-test/: jw.rs
src/: client.rs  err.rs  helper.rs  lib.rs  req.rs  service.rs  tests.rs
src/raw/: mod.rs  req.rs  tests.rs
src/raw/resp/: mod.rs
src/raw/resp/tests/pages/: course_info.rs  object_moved.rs  scores.rs
src/raw/tests/: jw.rs  mock.rs  mod.rs
src/resp/: err.rs  mod.rs
src/resp/tests/: mod.rs
src/resp/tests/pages/: course_info.rs  courses.rs  mod.rs  scores_base.rs
src/tests/: jw.rs  mock.rs  mod.rs
src/tests/pages/: exams.rs  login.rs  major_scores.rs  mod.rs  scores.rs  total_credit.rs
