[package]
name = "zju-jw-scraper"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "浙江大学教务网爬虫库"
repository = "https://github.com/QSCTech/jw-scraper"
keywords = ["zju", "jw", "scraper"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/zju-jw-scraper"

[dependencies]
unhtml = "0.6"
unhtml_derive = "0.5"
serde = "1.0"
serde_derive = "1.0"
failure = "0.1"
failure_derive = "0.1"
reformation = "0.4.1"
interfacer-http = { version = "0.1", features = ["encode", "serde-base", "serde-urlencoded", "unhtml-html"] }

[badges]
travis-ci = { repository = "QSCTech/jw-scraper", branch = "master" }