[package]
name = "zju-jw-scraper"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "浙江大学教务网爬虫库"
repository = "https://github.com/QSCTech/jw-scraper"
keywords = ["zju", "jw", "scraper"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/zju-jw-scraper"

[dependencies]
unhtml = { version = "0.7", features = ["derive"] }
serde = "1.0"
serde_derive = "1.0"
failure = "0.1"
failure_derive = "0.1"
reformation = "0.4"
interfacer-http = { version = "0.1", features = ["encoding", "serde-base", "serde-urlencoded", "unhtml-html"] }

# dependencies for test
interfacer-http-hyper = { git = "https://github.com/Hexilee/interfacer-http", optional = true }
config = { version = "0.9", optional = true }
tokio = { version = "0.2.0-alpha.1", optional = true }

[badges]
travis-ci = { repository = "QSCTech/jw-scraper", branch = "master" }

[features]
test = ["interfacer-http-hyper", "config", "tokio"]