[package]
name = "zju-jw-scraper"
version = "0.2.1"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "浙江大学教务网爬虫库"
repository = "https://github.com/QSCTech/jw-scraper-rs"
keywords = ["zju", "jw", "scraper"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/zju-jw-scraper"

[dependencies]
unhtml = { version = "0.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
reformation = "0.4"
interfacer-http = { version = "0.2", features = ["encoding", "serde-base", "serde-urlencoded", "unhtml-html"]}
interfacer-http-hyper = { version = "0.1", optional = true }

[dev-dependencies]
config = "0.9"
tokio = "0.2.0-alpha.1"
encoding = "0.2"
hyper-tls = "0.4.0-alpha.1"
interfacer-http-hyper = "0.1"

[badges]
travis-ci = { repository = "QSCTech/jw-scraper-rs", branch = "master" }

[features]
client = ["interfacer-http-hyper"]

[[example]]
name = "connector"
required-features = ["client"]

[package.metadata.docs.rs]
all-features = true
